Added dbschema database folder

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,12 @@ android {
         }
     }
 
+    kapt {
+        arguments {
+            arg("room.schemaLocation", "${project.projectDir}/dbschema/")
+        }
+    }
+
 }
 
 dependencies {
